--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+.app
+{
+    background-color: black;
+    color: white;
+    height: 100vh;
+}
+.header
+{
+    font-size: 2rem;
+    font-weight: 900;
+    height: 10vh;
+    border-bottom: 1px solid white;
+}
+.aligncenter
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.board
+{
+    height: 92vh;
+    font-size: 2rem;
+    font-weight: 900;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.row 
+{
+    display: flex;
+    height: 20vh;
+    
+}
+.cell 
+{
+    width: 15vw;
+    border:1px solid white;
+    color:black;
+    font-size: 5rem;
+}
+.yellow{
+    background-color: yellow;
+}
+.orange
+{
+    background-color: orange;
+}
+.poi
+{
+    height: 5vh;
+    width: 20vw;
+    font-size: 1rem;
+    background-color: blueviolet;
+    color: white;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
